# WorldModelLens

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Lab-Site  Makefile  README.md  demo_intervention.py  download_weights.py  hooked_world_model.py  implementation_plan.md  pyproject.toml  pyrightconfig.json  pytest.ini  walkthrough.md
.claude/: settings.local.json
.github/workflows/: ci.yml  python-package.yml
analysis/: __init__.py  belief_analyzer.py
api/: server.py
backends/: __init__.py  base.py  custom_adapter_template.py  dreamerv2.py  dreamerv3.py  iris.py  registry.py  tdmpc2.py
benchmarks/: __init__.py
branching/: __init__.py  brancher.py  counterfactual.py
cli/: __init__.py  commands.py
cli/example_experiments/: basic_analysis.yaml  circuit_discovery.yaml  reward_attribution.yaml
cloud/: run_gcp.sh
core/: __init__.py  activation_cache.py  config.py  hooks.py  latent_state.py  latent_trajectory.py
deploy/docker/: Dockerfile.a100  build.sh  (+6 more)
deployment/: __init__.py  api.py  gradio_demo.py
docs/: conf.py  examples.md  faithfulness.md  getting-started.md  glossary.md  index.md  installation.md  introduction.md  make.bat
envs/: __init__.py  env_interface.py
examples/: 01_quickstart.py  02_probing.py  03_patching.py  04_branching.py  05_belief_analysis.py  06_disentanglement.py  07_video_model.py  08_toy_video_world_model.py  09_toy_scientific_dynamics.py  10_causal_engine.py  10_causal_experiment.py  11_hub_iris_demo.py  11_unified_disentanglement.py  12_aopc_example.py  layer_cka_analysis.py  migration_example.py
explain/: __init__.py
hub/: __init__.py  model_hub.py  trajectory_hub.py
notebooks/: 01_quickstart.ipynb  02_patching_basics.ipynb  03_causal_tracing.ipynb  04_sparse_autoencoders.ipynb  05_multimodal_analysis.ipynb  06_long_horizon.ipynb  07_benchmarks.ipynb  08_case_study_dreamerv3.ipynb
patching/: __init__.py  causal_tracer.py  dim_patcher.py  patcher.py  sweep_result.py
probing/: __init__.py  geometry.py  layer_prober.py  prober.py  temporal_memory.py
sae/: __init__.py
safety/: __init__.py
scripts/: download_ijepa_weights.py
tests/: conftest.py  test_attribution.py  test_belief_analyzer.py  test_benchmark_runner.py  test_core_to_module_hook_adapter.py  test_crossmodal.py  test_faithfulness_analyzer.py  test_forward_runner.py  test_geometry_analyzer.py  test_hook_registry.py  test_hook_removal_preserves_other.py  test_hooked_world_model.py  test_hub.py  test_ijepa_features.py  test_integration_non_rl.py  test_kv_cache_hooks.py  test_layer_cka.py  test_monitoring.py  test_run_with_hooks_integration.py  test_sae.py  test_safety_analyzer.py  test_smoke.py  test_temporal_memory.py  test_visualization.py
utils/: __init__.py  device.py  logging.py  tensor_ops.py
viz/: __init__.py
world_model_lens/: __init__.py  hooked_world_model.py  pull_request_log.md  visualization_walkthrough.md
(+168 files in other folders)
